Create navbar menu

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,6 +24,5 @@ $red: hsl(348, 86%, 61%);
 $primary: hsl(246, 97%, 66%);
 $secondary: hsl(271, 100%, 71%);
 
-$font-main: BlinkMacSystemFont, -apple-system, 'Segoe UI', 'Roboto', 'Oxygen',
-	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-	'Helvetica', 'Arial', sans-serif;
+$font-main: 'Lato', 'Segoe UI', Candara, 'Bitstream Vera Sans', 'DejaVu Sans',
+	'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref', sans-serif;
