--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,6 +24,9 @@ $red: hsl(348, 86%, 61%);
 $primary: hsl(246, 97%, 66%);
 $secondary: hsl(271, 100%, 71%);
 
+$main-background: $black;
+$main-foreground: $white;
+
 $fancy-gradient: linear-gradient(
 	25deg,
 	rgba(102, 86, 252, 1) 0%,
