Add Poppins font

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -35,5 +35,6 @@ $fancy-gradient: linear-gradient(
 	rgba(204, 84, 247, 1) 100%
 );
 
-$font-main: 'Lato', 'Segoe UI', Candara, 'Bitstream Vera Sans', 'DejaVu Sans',
-	'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref', sans-serif;
+$font-main: 'Poppins', 'Lato', 'Segoe UI', Candara, 'Bitstream Vera Sans',
+	'DejaVu Sans', 'Bitstream Vera Sans', 'Trebuchet MS', Verdana, 'Verdana Ref',
+	sans-serif;
