Implement user management

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,6 +24,11 @@ $red: hsl(348, 86%, 61%);
 $primary: hsl(246, 97%, 66%);
 $secondary: hsl(271, 100%, 71%);
 
+$danger: $red;
+$success: $green;
+$warning: $yellow;
+$info: $blue;
+
 $main-background: $black;
 $main-foreground: $white;
 
