Implement admin status editing

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -29,7 +29,7 @@ $success: $green;
 $warning: $yellow;
 $info: $blue;
 
-$main-background: $black;
+$main-background: $black-lighter;
 $main-foreground: $white;
 
 $fancy-gradient: linear-gradient(
